app-word_press/ci/k8s/wordpress-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-service
spec:
  type: NodePort #set to NodePort for ALB ingress
  ports:
   - port: 80 # The port of the service
     targetPort: 80 # This is the actual port on which your application is running inside the container.
     nodePort: 30004 # The port on the node it will recieve traffic from for the node has between 30000 - 32767
  selector:
    app: wordpress #this is used to bind this service to the deployment (deployment-example.yml)
    tier: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-deployment
  labels:
    app: wordpress 
    tier: frontend
spec:
  selector:
    matchLabels:
      app: wordpress 
      tier: frontend
  replicas: 4
  template:
    metadata:
      name: wordpress
      labels:
        app: wordpress 
        tier: frontend
    spec:
      containers:
        - name: wordpress
          image: wordpress
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 500m
              memory: 512Mi  
          ports:
          - containerPort: 80
            name: wordpress
